2010-07-01  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/PrintVisitor.cpp: Fix #succ rewriting (ticket #12).
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/SafetyChecker.cpp: Fix +,* safety checking (ticket #13).

2010-07-01  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/ASPSolver.h: Replaced ASPSolver classes by
	ASPSolverManager, which has an automatic mode (used by dlvhex) and
	manual possibilities to select the used solver software and options.
	This change yielded all the other fixes/changes below.
	* include/dlvhex/ASPSolver.tcc: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.

	* include/dlvhex/DLVProcess.h: Decoupled Process from Solver,
	now a process is created by ASPSolverManager and not by dlvhex itself,
	and more of the process' properties are configured by the Solver.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* include/dlvhex/Process.h: Likewise.
	* src/dlvhex/DLVProcess.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

	* include/dlvhex/Literal.h: Literal, Atom, Rule, and Program now know
	whether they are Higher Order or not, Program knows whether it contains
	aggregates (this way the solver software can decide how each combination
	has to be treated).
	* include/dlvhex/Program.h: Likewise.
	* include/dlvhex/Rule.h: Likewise.
	* include/dlvhex/ExternalAtom.h: Likewise.
	* include/dlvhex/Atom.h: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/Rule.cpp: Likewise.
	* src/dlvhex/Program.cpp: Likewise.
	* src/dlvhex/AggregateAtom.cpp: Likewise.
	* src/dlvhex/Literal.cpp: Likewise.

	* include/dlvhex/Atom.h: BuiltinPredicate: new unary constructor
	(#int was previously stored as Atom with special magic).
	New possibility to prefer infix vs prefix printing.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/PrintVisitor.cpp: Likewise.
	* src/dlvhex/SafetyChecker.cpp: Likewise.

	* include/dlvhex/DLVresultParserDriver.h: Defaulting to FirstOrder