@@ -3,6 +3,8 @@
 	* src/dlvhex/PrintVisitor.cpp: Fix #succ rewriting (ticket #12).
 	* src/dlvhex/Atom.cpp: Likewise.
 	* src/dlvhex/SafetyChecker.cpp: Fix +,* safety checking (ticket #13).
+	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fix == vs = as well
+	as <> vs != builtin binary operator treatment (ticket #14).
 
 2010-07-01  Peter Schueller  <ps@kr.tuwien.ac.at>
 
